# SurfAI

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  railway.json  server.py
client/: .env.example
client/src/: App.css  App.jsx  index.css
src/: agent.py  browser_manager.py  config.py  tools.py
static/: index.html
